RESOLVED FIXED249703
ASSERTION FAILED: Unhandled message RemoteSourceBufferProxy_SetTimestampOffset to 3
https://bugs.webkit.org/show_bug.cgi?id=249703
Summary ASSERTION FAILED: Unhandled message RemoteSourceBufferProxy_SetTimestampOffse...
Jean-Yves Avenard [:jya]
Reported 2022-12-21 01:34:44 PST
Got this assertion when running `WebKit.MSEHasMediaStreamingActivity` ``` Running tests ASSERTION FAILED: Unhandled message RemoteSourceBufferProxy_SetTimestampOffset to 3 assertionFailureDueToUnreachableCode /Users/jyavenard/Work/webkit/OpenSource/WebKitBuild/Debug/DerivedSources/WebKit/GPUConnectionToWebProcessMessageReceiver.cpp(133) : virtual void WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection &, IPC::Decoder &) 1 0x12facf388 WTFCrash 2 0x1149c17d8 WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 3 0x116b93f24 IPC::Connection::dispatchMessage(IPC::Decoder&) 4 0x116b943e4 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder>>) 5 0x116b94758 IPC::Connection::dispatchOneIncomingMessage() 6 0x116bb1d6c IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder>>)::$_17::operator()() const 7 0x116bb1cac WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder>>)::$_17, void>::call() 8 0x12faf7490 WTF::Function<void ()>::operator()() const 9 0x12fb903a4 WTF::RunLoop::performWork() 10 0x12fb94b9c WTF::RunLoop::performWork(void*) 11 0x19dc54f38 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 12 0x19dc54ecc __CFRunLoopDoSource0 13 0x19dc54c3c __CFRunLoopDoSources0 14 0x19dc53844 __CFRunLoopRun 15 0x19dc52db4 CFRunLoopRunSpecific 16 0x19ebc49cc -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 17 0x19ec3d1ec -[NSRunLoop(NSRunLoop) run] 18 0x19d8c2424 _xpc_objc_main 19 0x19d8c1d44 xpc_main 20 0x114bc4b38 WebKit::XPCServiceMain(int, char const**) 21 0x116b648d4 WKXPCServiceMain 22 0x100fbff9c main 23 0x19d81bf34 start LEAK: 1 WebProcessPool LEAK: 1 WebPageProxy worker/0 TestWebKitAPI.WebKit.MSEHasMediaStreamingActivity Passed Ran 1 tests of 1 with 1 successful ```
Attachments
Radar WebKit Bug Importer
Comment 1 2022-12-21 01:35:03 PST
Jean-Yves Avenard [:jya]
Comment 2 2023-03-30 01:47:41 PDT
EWS
Comment 3 2023-03-30 09:25:05 PDT
Committed 262333@main (6589260fc1b0): <https://commits.webkit.org/262333@main> Reviewed commits have been landed. Closing PR #12162 and removing active labels.
WebKit Commit Bot
Comment 4 2023-03-31 09:52:01 PDT
Re-opened since this is blocked by bug 254825
Simon Fraser (smfr)
Comment 5 2023-03-31 17:36:46 PDT
This was re-landed in 262427@main.
Alexey Proskuryakov
Comment 6 2023-04-02 18:49:28 PDT
*** Bug 254688 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.