Source/WebKit/WebProcess/GPU/media/SourceBufferPrivateRemote.h
@@ -66,6 +66,7 @@ public:
     virtual ~SourceBufferPrivateRemote();
 
     void clearMediaSource() { m_mediaSourcePrivate = nullptr; }
+    void disconnect() { m_disconnected = true; }
 
 private:
     SourceBufferPrivateRemote(GPUProcessConnection&, RemoteSourceBufferIdentifier, const MediaSourcePrivateRemote&, const MediaPlayerPrivateRemote&);
@@ -133,6 +134,9 @@ private:
 
     bool m_isActive { false };
     uint64_t m_totalTrackBufferSizeInBytes = { 0 };
+
+    bool isGPURunning() const { return !m_disconnected && m_gpuProcessConnection; }
+    bool m_disconnected { false };
 
 #if !RELEASE_LOG_DISABLED
     const Logger& logger() const final { return m_logger.get(); }
